# vanillaDart

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/uk/unsimp/vanilla/binds/vanilla_dart_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
ios/: vanilla_dart.podspec
ios/Classes/: vanilla_dart.c
lib/: vanilla_dart.dart  vanilla_dart_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  vanilla_dart.c
